welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: ')' expected but 'else' found.
  		} else if (day<1){
                  ^